[package]
name = "wasm_extra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm_extra_macros = { git="https://github.com/JohnScience/wasm_extra_macros" }
web-sys = "0.3.60"

[features]
default = ["all"]
all = [
    "Window",
    "HtmlCanvasElement",
]
Window = ["web-sys/Window"]
HtmlCanvasElement = ["web-sys/HtmlCanvasElement"]
